# dspatch

./: .bzrignore  .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CHANGES  CMakeLists.txt  CNAME  DSPatchVersion.h.in  LICENSE  README.md  app.exe.manifest  build  build.sh  index.html  install  install.sh  manifest.in  meson.build  version.rc.in
.github/workflows/: build_and_test.yml
doc/: CMakeLists.txt  Doxyfile
doc/html/: _d_s_patch_8cpp_source.html  _d_s_patch_8h_source.html  _dsp_circuit_8cpp_source.html  _dsp_circuit_8h_source.html  _dsp_circuit_thread_8cpp_source.html  _dsp_circuit_thread_8h_source.html  _dsp_component_8cpp_source.html  _dsp_component_8h_source.html  _dsp_component_thread_8cpp_source.html  _dsp_component_thread_8h_source.html  _dsp_run_type_8h_source.html  _dsp_signal_8cpp_source.html  _dsp_signal_8h_source.html  _dsp_signal_bus_8cpp_source.html  _dsp_signal_bus_8h_source.html  _dsp_thread_8h_source.html  _dsp_thread_null_8h_source.html  _dsp_wire_8h_source.html  _dsp_wire_bus_8cpp_source.html  _dsp_wire_bus_8h_source.html  annotated.html  class_d_s_patch-members.html  class_d_s_patch.html  class_dsp_circuit-members.html  class_dsp_circuit.html  class_dsp_circuit_thread-members.html  class_dsp_circuit_thread.html  class_dsp_component-members.html  class_dsp_component.html  class_dsp_component_thread-members.html  class_dsp_component_thread.html  class_dsp_mutex-members.html  class_dsp_mutex.html  class_dsp_run_type-members.html  class_dsp_run_type.html  class_dsp_signal-members.html  class_dsp_signal.html  class_dsp_signal_bus-members.html  class_dsp_signal_bus.html  class_dsp_thread-members.html  (+17 more)
doc/html/search/: all_64.js  (+3 more)
docs/: 404.html  CMakeLists.txt  Doxyfile  index.html
docs/html/: _adder_8h_source.html  _auto_tick_thread_8h_source.html  _branch_sync_probe_8h_source.html  _changing_counter_8h_source.html  _changing_probe_8h_source.html  _circuit_8cpp_source.html  _circuit_8h_source.html  _circuit_counter_8h_source.html  _circuit_probe_8h_source.html  _circuit_thread_8cpp_source.html  _circuit_thread_8h_source.html  _common_8h_source.html  _component_8cpp_source.html  _component_8h_source.html  _component_thread_8cpp_source.html  _component_thread_8h_source.html  _counter_8h_source.html  _d_s_patch_8cpp_source.html  _d_s_patch_8h_source.html  _d_s_patch_version_8h_source.html  _dsp_circuit_8cpp_source.html  _dsp_circuit_8h_source.html  _dsp_circuit_thread_8cpp_source.html  _dsp_circuit_thread_8h_source.html  _dsp_component_8cpp_source.html  _dsp_component_8h_source.html  _dsp_component_thread_8cpp_source.html  _dsp_component_thread_8h_source.html  _dsp_parameter_8cpp_source.html  _dsp_parameter_8h_source.html  _dsp_plugin_8cpp_source.html  _dsp_plugin_8h_source.html  _dsp_plugin_loader_8cpp_source.html  _dsp_plugin_loader_8h_source.html  _dsp_run_type_8h_source.html  _dsp_signal_8cpp_source.html  _dsp_signal_8h_source.html  _dsp_signal_bus_8cpp_source.html  _dsp_signal_bus_8h_source.html  _dsp_thread_8h_source.html  (+342 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_9.js  classes_b.js  classes_e.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  pages_5.js  search.css  searchdata.js
docs/latex/: refman.tex
example/: CMakeLists.txt  DspAdder.h  DspAudioDevice.cpp  DspAudioDevice.h  DspGain.h  DspOscillator.cpp  DspOscillator.h  DspWaveStreamer.cpp  DspWaveStreamer.h  main.cpp
example/linux/Debug/: makefile  sources.mk  subdir.mk
example/linux/Debug/rtaudio/: subdir.mk
example/linux/Release/: makefile  objects.mk
example/mac/example/: example.1
example/mac/example.xcodeproj/: project.pbxproj
example/mac/example.xcodeproj/project.xcworkspace/xcuserdata/marcustomlinson.xcuserdatad/: UserInterfaceState.xcuserstate
example/mac/example.xcodeproj/xcuserdata/marcustomlinson.xcuserdatad/xcschemes/: example.xcscheme  xcschememanagement.plist
example/osc-plugin/: DspOscillator.cpp  DspOscillator.h
example/oscillator-plugin/: CMakeLists.txt  DspOscillator.cpp  DspOscillator.h
example/rtaudio/: RtAudio.cpp  RtAudio.h
example/windows/: example.sln  example.vcproj
include/: DSPatch.h  DspCircuit.h  DspCircuitThread.h  DspComponent.h  DspComponentThread.h  DspSignal.h  DspSignalBus.h  DspThread.h  DspThreadUnix.h  DspWire.h  DspWireBus.h
include/dspatch/: Circuit.h  Common.h  Component.h  DspCircuit.h  DspCircuitThread.h  DspComponent.h  DspComponentThread.h  DspParameter.h  DspPlugin.h  DspPluginLoader.h  DspRunType.h  DspSignal.h  DspSignalBus.h  DspThread.h  DspThreadNull.h  DspThreadUnix.h  DspThreadWin.h  DspWire.h  DspWireBus.h  Plugin.h  PluginLoader.h  RunType.h  Signal.h  SignalBus.h  ThreadNull.h  ThreadPool.h
scripts/: clang-format.bat  clang-format.sh
src/: Circuit.cpp  Component.cpp  DSPatch.cpp  DspCircuit.cpp  DspCircuit.h  DspCircuitThread.cpp  DspCircuitThread.h  DspComponent.cpp  DspComponent.h  DspComponentThread.cpp  DspComponentThread.h  DspParameter.cpp  DspPlugin.cpp  DspPluginLoader.cpp  DspRunType.h  DspSignal.cpp  DspSignal.h  DspSignalBus.cpp  DspSignalBus.h  DspThread.h  DspThreadNull.h  DspWireBus.cpp  DspWireBus.h  Plugin.cpp  PluginLoader.cpp  Signal.cpp  SignalBus.cpp  ThreadPool.cpp
src/internal/: AutoTickThread.cpp  AutoTickThread.h  CircuitThread.cpp  CircuitThread.h  Common.h  ComponentThread.cpp  ComponentThread.h  ParallelCircuitThread.h  Thread.h  ThreadUnix.h  ThreadWin.h  Wire.h
subprojects/catch/: meson.build
tests/: CMakeLists.txt  catch.hpp  main.cpp  meson.build
tests/components/: Adder.h  BranchSyncProbe.h  ChangingCounter.h  ChangingProbe.h  CircuitCounter.h  CircuitProbe.h  Counter.h  FeedbackProbe.h  FeedbackTester.h  Incrementer.h  NoOutputProbe.h  NullInputProbe.h  ParallelProbe.h  PassThrough.h  SerialProbe.h  SlowCounter.h  SlowPassThrough.h  SporadicCounter.h  ThreadingProbe.h
tutorial/: CMakeLists.txt  components.h  main.cpp  meson.build
